change command to be a shell command from cmd.exe or bash -c